== 1.04.002

	Enhancements:
	----------------------------
	+ Caching of SQL results to avoid multiple queries;
	+ Reduced number of DB queries;
	+ Added selected mail notifications to admins to be notified on IP/subnet change;
	+ Added new subnetId index to ipaddresses table that significantly improves network loading;
	+ Now using only 1 network connection towards MySQL server;

	Translations:
	----------------------------
	+ Added es_ES translation;

	Bugfixes:
	----------------------------
	+ Fixed top 10 widgets not escaping strings;
	+ Fixed section parent can be set to self that caused section to disapear;
	+ Fixed username instead of password being sent to smtp server;
	+ Fixed IE search bug with workaround;
	+ Fixed subnet and bcast not showing on strict mode disabled;
	+ Fixed top subnets missing on dashboard for non-admin users;
	+ Fixed bug when installation was silently failing bacause pf missing _() function (missing gettext extension)
	+ Fixed device custom field not populated on adding device;
	
	Security Fixes:
	----------------------------
	+ Fixed known command injection vulnerabilities in the scan functions;
	+ Fixed known SQL injection vulnerabilities;
	+ Fixed known XSS vulnerabilities;
	+ Fixed known action XSS events;
	//+ Added hashing of username/password for user login;
	+ Added option to force user to change pass after first login;
	+ Admin password must be changed after installation;
	+ Added auth block for 5 minutes after 5x unsuccesfull login;

== 1.0
	
	New features:
	----------------------------
	+ IP address page with IP address details and IP history (Changelog);
	+ IP address changelog, subnet and section changelogs with full changelog under tools;
	+ Favourite subnets for quick access;
	+ Adding subnets from free space with automatic mask provided;
	+ Automatic database validity check after upgrading and automatic field/table fix under administration;
	+ Automatic weekly check for new phpipam version;

	Enhancements: