@@ -204,8 +204,7 @@ class Net_IPv4
         if (strchr($address, "/")) {
             $parts = explode("/", $address);
             if (! $myself->validateIP($parts[0])) {
-            	$pear = new PEAR();
-                return $pear->raiseError("invalid IP address");
+                return PEAR::raiseError("invalid IP address");
             }
             $myself->ip = $parts[0];
 
