@@ -9,7 +9,7 @@ require_once( dirname(__FILE__) . '/dbfunctions.php' );
 /* @debugging functions ------------------- */
 ini_set('display_errors', 1);
 if (!$debugging) { error_reporting(E_ERROR ^ E_WARNING); }
-else			 { error_reporting(E_ALL ^ E_NOTICE); }
+else			 { error_reporting(E_ALL ^ E_NOTICE ^ E_STRICT); }
 
 /* set caching array to store vlans, sections etc */
 $cache = array();
@@ -52,7 +52,7 @@ $database = new database($db['host'], $db['user'], $db['pass'], $db['name'], NUL
 /* set latest version */
 define("VERSION", "1.04");									//version changes if database structure changes
 /* set latest revision */
-define("REVISION", "002");									//revision always changes, verision only if database structure changes
+define("REVISION", "003");									//revision always changes, verision only if database structure changes
 /* set last possible upgrade */
 define("LAST_POSSIBLE", "0.9");								//minimum required version to be able to upgrade
 
